---
config:
  layout: elk
---
erDiagram
    direction TB

    BEEKEEPER {
        id int PK
        username string
        password_hash string
        email string
        phone string
        created_at timestamp
        updated_at timestamp
    }

    HIVE {
        id int PK
        beekeeper_id int FK
        name string
        notes string
        created_at timestamp
        updated_at timestamp
    }

    SESSION {
        id int PK
        beekeeper_id int FK
        session_token string
        active bool
        created_at timestamp
        expires_at timestamp
        last_activity_at timestamp
    }

    DEVICE {
        id int PK
        hive_id int FK
        installed_at timestamp
        last_seen_at timestamp
        active bool
    }

    READING {
        id int PK
        device_id int FK
        recorded_at timestamp
        temperature float
        battery_voltage float
        signal_strength float
        created_at timestamp
    }

    LOCATION {
        id int PK
        latitude float
        longitude float
        description string
        address string
        timezone string
        created_at timestamp
    }

    API_WEATHER_READING {
        id int PK
        location_id int FK
        recorded_at timestamp
        temperature float
        humidity float
        wind_speed float
        wind_direction float
        rainfall_mm float
        pressure_hpa float
        source string
        created_at timestamp
    }

    DAILY_AGGREGATE {
        id int PK
        device_id int FK
        metric_type string
        day date
        min_value float
        max_value float
        avg_value float
        sample_count int
        created_at timestamp
    }

    ALERT_RULE {
        id int PK
        hive_id int FK
        metric_type string
        comparator string
        threshold_value float
        threshold_value_2 float
        duration_minutes int
        severity string
        enabled bool
        created_at timestamp
    }

    ALERT_EVENT {
        id int PK
        rule_id int FK
        fired_at timestamp
        cleared_at timestamp
        status string
        message string
        created_at timestamp
    }

    BEEKEEPER ||--o{ HIVE : owns
    BEEKEEPER ||--o{ SESSION : has
    LOCATION ||--o{ HIVE : hosts
    LOCATION ||--o{ API_WEATHER_READING : external_weather_api
    HIVE ||--o{ DEVICE : has
    DEVICE ||--o{ READING : reports
    DEVICE ||--o{ DAILY_AGGREGATE : summarized
    HIVE ||--o{ ALERT_RULE : monitors
    ALERT_RULE ||--o{ ALERT_EVENT : triggers
